--- a/bakoni/report/sale_report_templates.xml
+++ b/bakoni/report/sale_report_templates.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="report_saleorder_document_inherit_bakoni" inherit_id="sale.report_saleorder_document">
+        <xpath expr="//t[@t-call='web.external_layout']/div[1]/div[1]" position="after">
+            <t t-set="information_block">
+                <strong t-if="doc.partner_shipping_id == doc.partner_invoice_id">Invoicing and shipping address:</strong>
+                <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing address:</strong>
+                <div t-field="doc.partner_invoice_id"
+                t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+            </t>
+        </xpath>
         <xpath expr="//div[@id='informations']" position="inside">
             <div name="tender_ref" t-if="doc.tender_ref" class="mr32">
                 <strong>Tender Reference:</strong>
@@ -20,4 +28,7 @@
             </p>
         </xpath>
     </template>
+
+    
+    
 </odoo>
